[project]
name = "ai-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pytest>=7.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "streamlit>=1.30",
]
